force-app/objects/Tax_Data__c/Tax_Data__c.object-meta.xml
<CustomObject>
    <description>Use to Store Tax Data</description>
    <label>Tax Data</label>
    <nameField>
        <displayFormat>TAX DATA -{0000}</displayFormat>
        <label>Tax Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>