force-app/objects/Tax_Data__c/fields/Adjusted_Gross_Income__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Gross_Income__c</fullName>
    <label>Adjusted Gross Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>