force-app/objects/Tax_Data__c/fields/Agency_Date__c.field-meta.xml
<CustomField>
    <fullName>Agency_Date__c</fullName>
    <label>Agency Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>