force-app/objects/Tax_Data__c/fields/Annual_Form__c.field-meta.xml
<CustomField>
    <fullName>Annual_Form__c</fullName>
    <label>Annual Form</label>
    <length>18</length>
    <type>Text</type>
</CustomField>