force-app/objects/Tax_Data__c/fields/Audit_Date__c.field-meta.xml
<CustomField>
    <fullName>Audit_Date__c</fullName>
    <label>Audit Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>