force-app/objects/Tax_Data__c/fields/CompanyId__c.field-meta.xml
<CustomField>
    <fullName>CompanyId__c</fullName>
    <label>CompanyId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>