force-app/objects/Tax_Data__c/fields/Curently_Not_Collectable_CNC_Date__c.field-meta.xml
<CustomField>
    <fullName>Curently_Not_Collectable_CNC_Date__c</fullName>
    <label>Curently Not Collectable(CNC) Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>