force-app/objects/Tax_Data__c/fields/Currently_Not_Collectable_CNC_Date__c.field-meta.xml
<CustomField>
    <fullName>Currently_Not_Collectable_CNC_Date__c</fullName>
    <label>Currently Not Collectable (CNC) Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>