force-app/objects/Tax_Data__c/fields/Extension_Date__c.field-meta.xml
<CustomField>
    <fullName>Extension_Date__c</fullName>
    <label>Extension Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>