force-app/objects/Tax_Data__c/fields/Federal_Tax_Deposit_Penalty_Date__c.field-meta.xml
<CustomField>
    <fullName>Federal_Tax_Deposit_Penalty_Date__c</fullName>
    <label>Federal Tax Deposit Penalty Date</label>
    <length>18</length>
    <type>Text</type>
</CustomField>