force-app/objects/Tax_Data__c/fields/Filing_Date__c.field-meta.xml
<CustomField>
    <fullName>Filing_Date__c</fullName>
    <label>Filing Date</label>
    <length>18</length>
    <type>Text</type>
</CustomField>