force-app/objects/Tax_Data__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <label>Form</label>
    <length>16</length>
    <type>Text</type>
</CustomField>