force-app/objects/Tax_Data__c/fields/Form_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Type__c</fullName>
    <label>Form Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>