force-app/objects/Tax_Data__c/fields/IRS_Balance__c.field-meta.xml
<CustomField>
    <fullName>IRS_Balance__c</fullName>
    <label>IRS Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>