force-app/objects/Tax_Data__c/fields/Late_Date__c.field-meta.xml
<CustomField>
    <fullName>Late_Date__c</fullName>
    <description>Late Date</description>
    <label>Late Date</label>
    <type>Date</type>
</CustomField>