force-app/objects/Tax_Data__c/fields/Levy_Date__c.field-meta.xml
<CustomField>
    <fullName>Levy_Date__c</fullName>
    <description>Levy Date</description>
    <label>Levy Date</label>
    <type>Date</type>
</CustomField>