force-app/objects/Tax_Data__c/fields/Lien_Date__c.field-meta.xml
<CustomField>
    <fullName>Lien_Date__c</fullName>
    <description>Lien Date</description>
    <label>Lien Date</label>
    <type>Date</type>
</CustomField>