force-app/objects/Tax_Data__c/fields/Notice_Date__c.field-meta.xml
<CustomField>
    <fullName>Notice_Date__c</fullName>
    <description>Notice Date</description>
    <label>Notice Date</label>
    <type>Date</type>
</CustomField>