force-app/objects/Tax_Data__c/fields/Offer_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Date__c</fullName>
    <description>Offer Date</description>
    <label>Offer Date</label>
    <type>Date</type>
</CustomField>