force-app/objects/Tax_Data__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <description>Payment Date</description>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>