force-app/objects/Tax_Data__c/fields/Payment_Plan_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Issue_Date__c</fullName>
    <description>Payment_Plan_Issue_Date</description>
    <label>Payment Plan Issue Date</label>
    <type>Date</type>
</CustomField>