force-app/objects/Tax_Data__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tax Datas</relationshipLabel>
    <relationshipName>Tax_Datas</relationshipName>
    <type>Lookup</type>
</CustomField>