force-app/objects/Tax_Data__c/fields/Tax_Data_Record__c.field-meta.xml
<CustomField>
    <fullName>Tax_Data_Record__c</fullName>
    <formula>HYPERLINK(
  &quot;/&quot; &amp; Id,Name,&quot;_blank&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Data Record</label>
    <type>Text</type>
</CustomField>