force-app/objects/Tax_Data__c/fields/Tax_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Tax_Quarter__c</fullName>
    <description>Tax Quarter</description>
    <label>Tax Quarter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quarter 1</fullName>
            </value>
            <value>
                <fullName>Quarter 2</fullName>
            </value>
            <value>
                <fullName>Quarter 3</fullName>
            </value>
            <value>
                <fullName>Quarter 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>