force-app/objects/Tax_Data__c/fields/Tax_Year__c.field-meta.xml
<CustomField>
    <fullName>Tax_Year__c</fullName>
    <description>Tax_Year</description>
    <label>Tax Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2000</fullName>
            </value>
            <value>
                <fullName>2001</fullName>
            </value>
            <value>
                <fullName>2002</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>