force-app/objects/Tax_Data__c/fields/TIN__c.field-meta.xml
<CustomField>
    <fullName>TIN__c</fullName>
    <label>TIN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>