force-app/objects/Tax_Data__c/fields/Total_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Total_Compensation__c</fullName>
    <label>Total Compensation</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>