force-app/objects/Tax_Data__c/fields/Total_Sales__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales__c</fullName>
    <label>Total Sales</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>