force-app/objects/Tax_Data__c/fields/Transcript_Link__c.field-meta.xml
<CustomField>
    <fullName>Transcript_Link__c</fullName>
    <formula>HYPERLINK( Transcript_Path__c,if(Transcript_Path__c!=NULL,&quot;View&quot;,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transcript Link</label>
    <type>Text</type>
</CustomField>