force-app/objects/Tax_Data__c/fields/Transcript_Path__c.field-meta.xml
<CustomField>
    <fullName>Transcript_Path__c</fullName>
    <label>Transcript Path</label>
    <type>Url</type>
</CustomField>