force-app/objects/Tax_Data__c/fields/Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Update_Date__c</fullName>
    <label>Update Date</label>
    <length>18</length>
    <type>Text</type>
</CustomField>